# uShell

./: .gitignore  CMakeLists.txt  README.md  build.sh  mingw-w64-x86_64.cmake
sources/: CMakeLists.txt
sources/ushell_core/: CMakeLists.txt
sources/ushell_core/ushell_core/: CMakeLists.txt
sources/ushell_core/ushell_core/inc/: ushell_core.h
sources/ushell_core/ushell_core/src/: ushell_core.cpp
sources/ushell_core/ushell_core_config/: CMakeLists.txt
sources/ushell_core/ushell_core_config/inc/: ushell_core_datatypes.cfg  ushell_core_datatypes.h  ushell_core_datatypes_user.h  ushell_core_keys.h  ushell_core_printout.h  ushell_core_prompt.cfg
sources/ushell_core/ushell_core_terminal/: CMakeLists.txt
sources/ushell_core/ushell_core_terminal/inc/: ushell_core_terminal.h  ushell_core_terminal_linux.h  ushell_core_terminal_windows.h
sources/ushell_core/ushell_core_utils/: CMakeLists.txt
sources/ushell_core/ushell_core_utils/inc/: ushell_core_utils.h
sources/ushell_core/ushell_core_utils/src/: ushell_core_utils.cpp
sources/ushell_settings/: CMakeLists.txt
sources/ushell_settings/inc/: ushell_core_settings.h
sources/ushell_user/: CMakeLists.txt
sources/ushell_user/ushell_user_app/: CMakeLists.txt
sources/ushell_user/ushell_user_app/src/: main.cpp
sources/ushell_user/ushell_user_plugins/: CMakeLists.txt  create_plugin.sh
sources/ushell_user/ushell_user_plugins/math_plugin/: CMakeLists.txt
sources/ushell_user/ushell_user_plugins/math_plugin/inc/: ushell_plugin_datatypes.h
sources/ushell_user/ushell_user_plugins/math_plugin/src/: ushell_plugin_interface.cpp  ushell_plugin_usercode.cpp
sources/ushell_user/ushell_user_plugins/template_plugin/: CMakeLists.txt
sources/ushell_user/ushell_user_plugins/template_plugin/inc/: ushell_plugin_commands.cfg  ushell_plugin_datatypes.h  ushell_plugin_shortcuts.cfg
sources/ushell_user/ushell_user_plugins/template_plugin/src/: ushell_plugin_interface.cpp  ushell_plugin_usercode.cpp
sources/ushell_user/ushell_user_plugins/test_plugin/: CMakeLists.txt
sources/ushell_user/ushell_user_plugins/test_plugin/inc/: ushell_plugin_commands.cfg
sources/ushell_user/ushell_user_plugins/test_plugin/src/: ushell_plugin_interface.cpp  ushell_plugin_usercode.cpp
sources/ushell_user/ushell_user_root/: CMakeLists.txt
sources/ushell_user/ushell_user_root/inc/: ushell_root_commands.cfg  ushell_root_datatypes.h
sources/ushell_user/ushell_user_root/src/: ushell_root_interface.cpp  ushell_root_usercode.cpp
sources/ushell_user/ushell_user_utils/: CMakeLists.txt
sources/ushell_user/ushell_user_utils/ushell_logger/: CMakeLists.txt
sources/ushell_user/ushell_user_utils/ushell_logger/inc/: ushell_user_logger.h
sources/ushell_user/ushell_user_utils/ushell_plugin_loader/: CMakeLists.txt
sources/ushell_user/ushell_user_utils/ushell_plugin_loader/inc/: ushell_user_plugin_loader.h
